Fixed tiny arrow, some spacing

--- a/core/static/core/css/custom.css
+++ b/core/static/core/css/custom.css
@@ -176,8 +176,6 @@
 	.dash-head {
 		position: relative;
 		padding: 1.1em 0 0 0;
-		margin-left: -3em;
-		margin-bottom: -0.5em;
 		background: #fff;
 		background-size: cover;
 		color: #7C9CD0;
@@ -440,11 +438,12 @@
 [data-tooltip]:after {
   z-index: 1000;
   padding: 8px;
-  width: 160px;
+  width: 120px;
   text-align: center;
   background-color: #000;
   background-color: hsla(0, 0%, 20%, 0.9);
   color: #fff;
+	letter-spacing: 1px;
   content: attr(data-tooltip);
   font-size: 14px;
   line-height: 1.2;
@@ -466,7 +465,7 @@
 [data-tooltip]:before,
 .tooltip:before,
 .tooltip-top:before {
-  margin-left: -6px;
+  margin-left: -15px;
   margin-bottom: -12px;
   border-top-color: #000;
   border-top-color: hsla(0, 0%, 20%, 0.9);
@@ -506,7 +505,6 @@
 
 .tooltip-left:before {
   margin-left: 0;
-  margin-right: -12px;
   margin-bottom: 0;
   border-top-color: transparent;
   border-left-color: #000;
